--- a/index.css
+++ b/index.css
@@ -1,6 +1,8 @@
 * {
     font-family: 'Poppins' sans-serif;
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 html {
@@ -9,4 +11,27 @@ html {
 
 body {
     background: #EBEAB4;
+    color: white;
+}
+
+.header-section {
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(./Images/home-bg.jpg);
+    position: relative;
+}
+.container {
+    padding: 10px 10%;
+
+}
+.header-text h1{
+    font-size: 75px;
+    margin: 40px 0;
+}
+
+.header-text p {
+    margin: 30px 0;
+    font-size: 25px;
 }
