--- a/Menu/menu.css
+++ b/Menu/menu.css
@@ -152,7 +152,7 @@ nav ul LI a:hover::after {
     
 }
 
-.middle-container h1{
+.menu-section h1{
     color: black;
     font-size: 70px;
     text-align: center;
